// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`annotateWithChangesFile should match snapshot 1`] = `
"<html>
<body>
<style>
    body {
        background-color: black;
        color: white;
    }

    .Add {
        background-color: rgba(0,255,0,0.3);
    }

    .Delete {
        background-color: rgba(255,0,0,0.3);
    }

    .Move {
        background-color: rgba(0,0,255,0.3);
    }

    .string_left {
        width: 50%;
        float: left;
    }
</style>
<pre class=\\"string_left\\"><code>{<br/>
<span class=\\"Textual Delete\\">  </span><span class=\\"Textual Move\\">  <span class=\\"Lexical Move\\">\\"message\\": \\"Validation Failed\\"</span></span><span class=\\"Textual Delete\\"><span class=\\"Lexical Delete\\">,</span><br/>
  </span>  \\"errors\\": [<br/>
<span class=\\"Textual Delete\\">    </span>    {<br/>
<span class=\\"Textual Delete\\">      </span>      \\"resource\\": \\"Issue\\",<br/>
<span class=\\"Textual Delete\\">      </span>      \\"field\\": \\"title\\",<br/>
<span class=\\"Textual Delete\\">      </span>      \\"code\\": \\"missing_field\\"<br/>
<span class=\\"Textual Delete\\">    </span>    },<br/>
<span class=\\"Textual Delete\\">    </span>    {<br/>
<span class=\\"Textual Delete\\">      </span>      \\"resource\\": \\"Issue\\",<br/>
<span class=\\"Textual Delete\\">      </span>      \\"field\\": \\"milestone\\",<br/>
<span class=\\"Textual Delete\\">      </span>      \\"code\\": \\"invalid\\"<br/>
<span class=\\"Textual Delete\\">    </span>    }<br/>
<span class=\\"Textual Delete\\">  </span>  ]<br/>
}<br/>
</code></pre>
<pre class=\\"string_right\\"><code>{<br/>
  \\"errors\\": [<br/>
    {<br/>
      \\"resource\\": \\"Issue\\",<br/>
      \\"field\\": \\"title\\",<br/>
      \\"code\\": \\"missing_field\\"<br/>
    },<br/>
    {<br/>
      \\"resource\\": \\"Issue\\",<br/>
      \\"field\\": \\"milestone\\",<br/>
      \\"code\\": \\"invalid\\"<br/>
    }<br/>
  ]<span class=\\"Textual Add\\"><span class=\\"Lexical Add\\">,</span></span><br/>
<span class=\\"Textual Move\\">  <span class=\\"Lexical Move\\">\\"message\\": \\"Validation Failed\\"</span></span><br/>
}<br/>
</code></pre>
</body>
</html>"
`;

exports[`annotateWithDiff should work with diff 1`] = `
"<html>
<body>
<style>
    body {
        background-color: black;
        color: white;
    }

    .Add {
        background-color: rgba(0,255,0,0.3);
    }

    .Delete {
        background-color: rgba(255,0,0,0.3);
    }

    .Move {
        background-color: rgba(0,0,255,0.3);
    }

    .string_left {
        width: 50%;
        float: left;
    }
</style>
<pre class=\\"string_left\\"><code>{<br/>
<span class=\\"Textual Delete\\">  </span><span class=\\"Textual Move\\">  \\"message\\": \\"Validation Failed\\"</span><span class=\\"Textual Move\\"><span class=\\"Textual Move\\">,<br/>
</span></span><span class=\\"Textual Delete\\">  </span><span class=\\"Textual Move\\"><span class=\\"Textual Move\\">  \\"errors\\": [<br/>
    </span></span><span class=\\"Textual Delete\\">    </span><span class=\\"Textual Move\\"><span class=\\"Textual Move\\">{<br/>
</span></span><span class=\\"Textual Delete\\">      </span>      \\"resource\\": \\"Issue\\",<br/>
      <span class=\\"Textual Delete\\">      </span>\\"field\\": \\"title\\",<br/>
<span class=\\"Textual Delete\\">      </span>      \\"code\\": \\"missing_field\\"<br/>
    <span class=\\"Textual Delete\\">    </span>},<br/>
    <span class=\\"Textual Delete\\">    </span>{<br/>
<span class=\\"Textual Delete\\">      </span>      \\"resource\\": \\"Issue\\",<br/>
<span class=\\"Textual Delete\\">      </span>      \\"field\\": \\"milestone\\",<br/>
      <span class=\\"Textual Delete\\">      </span>\\"code\\": \\"invalid\\"<br/>
    <span class=\\"Textual Delete\\">    </span>}<br/>
  <span class=\\"Textual Delete\\">  ]</span><span class=\\"Textual Move\\"><br/>
}<br/>
</code></pre>
<pre class=\\"string_right\\"><code>{<br/>
<span class=\\"Textual Move\\"><span class=\\"Textual Move\\">  \\"errors\\": [<br/>
    </span></span><span class=\\"Textual Move\\"><span class=\\"Textual Move\\">{<br/>
</span></span>      \\"resource\\": \\"Issue\\",<br/>
      \\"field\\": \\"title\\",<br/>
      \\"code\\": \\"missing_field\\"<br/>
    },<br/>
    {<br/>
      \\"resource\\": \\"Issue\\",<br/>
      \\"field\\": \\"milestone\\",<br/>
      \\"code\\": \\"invalid\\"<br/>
    }<br/>
  <span class=\\"Textual Add\\">]</span><span class=\\"Textual Move\\"><span class=\\"Textual Move\\">,<br/>
</span></span><span class=\\"Textual Move\\">  \\"message\\": \\"Validation Failed\\"</span><span class=\\"Textual Move\\"><br/>
}<br/>
</code></pre>
</body>
</html>"
`;
